spacing fixed

--- a/base.css
+++ b/base.css
@@ -1032,7 +1032,7 @@ span.dot {
     border-top: none;
     left: -2px;
     right: -2px;
-    bottom: -350px;
+    bottom: -370px;
     padding: 0.5rem 0.7rem; }
 
   .producer {
