--- a/partials_css/main.scss
+++ b/partials_css/main.scss
@@ -649,7 +649,7 @@ span.dot {
 		border-top: none;
 		left: -2px;
 		right: -2px;
-		bottom: -350px;
+		bottom: -370px;
 		padding: 0.5rem 0.7rem;
 	}
 	.producer {
@@ -846,9 +846,6 @@ span.dot {
 		.filter__name {
 			padding: 0.7rem 1.7rem 0.7rem 2.8rem;
 		}
-		// .price__filtering-form{
-		// 	bottom: ;
-		// }
 	}
 	.input__fields {
 		justify-content: center;
